# terragen

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  start.sh
.github/workflows/: ci.yml
api/: __init__.py  auth.py  config.py  logging_config.py  main.py
api/routes/: auth.py  generate.py  modify.py  validate.py
examples/: terragen_sdk.ipynb
policies/: terraform.rego
src/terragen/: __init__.py  agent.py  cli.py  config.py  generator.py  main.py  modifier.py  patterns.py  questions.py  security_rules.py  tools.py  vision.py
src/terragen/agents/: __init__.py  base.py  checkov.py  clarification.py  code_generation.py  context.py  cost.py  fast_security.py  orchestrator.py  policy.py  security.py  validation.py  visualization.py
src/terragen/llm/: __init__.py  anthropic_adapter.py  base.py  client.py  deepseek_adapter.py  exceptions.py  grok_adapter.py  model_router.py  (+2 more)
test-aws/: README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf
test-aws/.infracost/: pricing.gob
test-azure/: README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
test-gcp/: README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf  versions.tf
test-learn/: README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf  versions.tf
tests/: __init__.py  test_agents.py  test_cli.py  test_config.py  test_integration.py  test_llm.py  test_modifier.py  test_pipeline_progress.py  test_tools.py
web/: package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
{output_dir}/: versions.tf
(+35 files in other folders)
