[project]
name = "terragen"
version = "1.0.0"
description = "AI-powered Terraform code generator with cost estimation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "python-dotenv>=1.0.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "python-dotenv>=1.0.0",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.0",
    "httpx>=0.26.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
terragen = "terragen.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
